<resources>

    <string name="app_name">EasyFinances</string>
    <string name="bienvenido_a_easyfinances">Bienvenido a EasyFinances</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="accede_a_tu_cuenta_existente">Accede a tu cuenta existente</string>
    <string name="registrarse">Registrarse</string>
    <string name="crea_una_nueva_cuenta">Crea una nueva cuenta</string>
    <string name="calendario_financiero">Calendario Financiero</string>
    <string name="no_se_ha_seleccionado_una_fecha">No se ha seleccionado una fecha</string>
    <string name="no_hay_transacciones_para_este_dia">No hay transacciones para este día.</string>
    <string name="escribe_un_recordatorio">Escribe un recordatorio...</string>
    <string name="aniadir_recordatorio">Añadir Recordatorio</string>
    <string name="eliminar_recordatorio">Eliminar Recordatorio</string>
    <string name="ahorro_0_00">Ahorro: €0.00</string>
    <string name="gastos_0_00">Gastos: €0.00</string>
    <string name="ingresos_0_00">Ingresos: €0.00</string>
    <string name="gr_ficos_financieros">Gráficos Financieros</string>
    <string name="no_tienes_cuenta_registrate">¿No tienes cuenta? Regístrate</string>
    <string name="olvidaste_tu_contrasenia">¿Olvidaste tu contraseña?</string>
    <string name="iniciar_session">Iniciar Sesión</string>
    <string name="contrasenia">Contraseña</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="iniciar_sesiion">Iniciar Sesión</string>
    <string name="icono_de_inicio_de_sesi_n">Icono de inicio de sesión</string>
    <string name="opciones">OPCIONES</string>
    <string name="transacciones">Transacciones</string>
    <string name="aniade_ingresos_o_gastos">Añade ingresos o gastos</string>
    <string name="lista_de_transacciones">Lista de Transacciones</string>
    <string name="revisa_y_organiza_tus_transacciones">Revisa y organiza tus transacciones</string>
    <string name="salud_financiera">Salud Financiera</string>
    <string name="visualiza_tu_progreso_financiero">Visualiza tu progreso financiero</string>
    <string name="calendario_financieo">Calendario Financiero</string>
    <string name="fechas_y_recordatorios_importantes">Fechas y recordatorios importantes</string>
    <string name="generar_informe_pdf">Generar Informe PDF</string>
    <string name="toda_la_informaci_n_de_tus_transacciones">Toda la información de tus transacciones</string>
    <string name="icono_de_candado">Icono de candado</string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
    <string name="introduce_tu_correo_electr_nico">Introduce tu correo electrónico</string>
    <string name="recuperar">Recuperar</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="introduce_tu_email">Introduce tu email</string>
    <string name="introduce_tu_contrase_a">Introduce tu contraseña</string>
    <string name="registrarsee">Registrarse</string>
    <string name="salir">Salir</string>
    <string name="guardar_transacci_n">Guardar Transacción</string>
    <string name="seleccionar_fecha">Seleccionar Fecha</string>
    <string name="fecha_seleccionada_ninguna">Fecha seleccionada: Ninguna</string>
    <string name="gasto">Gasto</string>
    <string name="ingreso">Ingreso</string>
    <string name="cantidad">Cantidad (€)</string>
    <string name="a_adir_transacci_n">AÑADIR TRANSACCIÓN</string>
    <string name="eliminar_transacci_n_seleccionada">Eliminar Transacción Seleccionada</string>
    <string name="total_ahorro_0_00">Total ahorro: €0.00</string>
    <string name="total_gastos_0_00">Total gastos: €0.00</string>
    <string name="saldo_actual_0_00">Saldo actual: €0.00</string>
    <string name="resumen_financiero">Resumen Financiero</string>
    <string name="cuanto_dinero_hay_en_tu_cuenta">¿Cuánto dinero hay en tu cuenta?</string>
    <string name="introduce_tu_saldo">Introduce tu saldo</string>
    <string name="confirmar">Confirmar</string>
    <string name="titulo_del_recordatorio">Título del recordatorio</string>
    <string name="descripcion_del_recordatorio">Descripción del recordatorio</string>
    <string name="fecha">Fecha</string>
    <string name="categoria">Categoría</string>
    <string name="fechaa">Fecha</string>
    <string name="tipo">Tipo</string>
    <string name="cambiar_idioma">Cambiar Idioma</string>
    <string name="eliminar_transaccion_seleccionada">Eliminar transacción seleccionada</string>
    <string name="lista_de_transacciones_financieras">Lista de transacciones financieras</string>
    <string name="ttotal_ahorro_0_00">Total ahorro: €0.00</string>
    <string name="ttotal_gastos_0_00">Total gastos: €0.00</string>
    <string name="ssaldo_actual_0_00">Saldo actual: €0.00</string>
    <string name="elemento_de_transacci_n_financiera">Elemento de transacción financiera</string>
    <string name="cantidad_de_la_transacci_n">Cantidad de la transacción</string>
    <string name="categor_a">Categoría</string>
    <string name="categor_a_de_la_transacci_n">Categoría de la transacción</string>
    <string name="ffecha">Fecha</string>
    <string name="fecha_de_la_transacci_n">Fecha de la transacción</string>
    <string name="ttipo">Tipo</string>
    <string name="tipo_de_transacci_n_ingreso_o_gasto">Tipo de transacción, ingreso o gasto</string>
</resources>