<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/pastelBlue">



    <!-- Título: Añadir Transacción -->
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_adir_transacci_n"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp" />

    <!-- Campo para ingresar la cantidad -->
    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cantidad"
        android:inputType="numberDecimal"
        android:background="@drawable/rounded_edittext"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="16dp" />


    <!-- Spinner para seleccionar la categoría -->
    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="12dp" />


    <!-- Checkbox para tipo de transacción -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <CheckBox
            android:id="@+id/checkboxIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingreso"
            android:textColor="@android:color/black"
            android:layout_marginEnd="20dp" />

        <CheckBox
            android:id="@+id/checkboxExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gasto"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <!-- Texto para mostrar la fecha seleccionada -->
    <TextView
        android:id="@+id/textSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_seleccionada_ninguna"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <!-- Botón para seleccionar la fecha -->
    <Button
        android:id="@+id/btnSelectDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_redondeado"
        android:text="@string/seleccionar_fecha"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp" />

    <!-- Botón para guardar la transacción -->
    <Button
        android:id="@+id/btnSaveTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_redondeado"
        android:text="@string/guardar_transacci_n"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp" />

    <!-- Botón para salir y volver a OptionActivity -->
    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_redondeado"
        android:text="@string/salir"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp" />

</LinearLayout>
