<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtReminderTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_del_recordatorio"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtReminderDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_del_recordatorio"
        android:textSize="14sp"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/txtReminderDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:textSize="12sp"
        android:layout_marginTop="4dp" />
</LinearLayout>

