<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/fondo_principal"
    android:padding="16dp">

    <!-- Título de la pantalla de registro -->
    <TextView
        android:id="@+id/txtRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        android:textSize="40sp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="40dp"/>

    <!-- Campo de correo electrónico -->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introduce_tu_email"
        android:inputType="textEmailAddress"
        android:textSize="22sp"
        android:textColorHint="@color/gray"
        android:textColor="#000000"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:background="@drawable/rounded_edittext"/>

    <!-- Campo de contraseña -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introduce_tu_contrase_a"
        android:inputType="textPassword"
        android:textSize="22sp"
        android:textColorHint="@color/gray"
        android:textColor="#000000"
        android:layout_marginBottom="30dp"
        android:padding="10dp"
        android:background="@drawable/rounded_edittext"/>

    <!-- Botón para registrarse -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarsee"
        android:textColor="#FFFFFF"
        android:background="@drawable/boton_redondeado"
        android:layout_marginTop="20dp"/>

</LinearLayout>


