<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <!-- Imagen de candado -->
    <ImageView
        android:id="@+id/imageLock"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:src="@drawable/llave"
        android:contentDescription="@string/icono_de_candado"
        android:layout_marginBottom="16dp" />

    <!-- Título -->
    <TextView
        android:id="@+id/textTitleRecover"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_contrase_a"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <!-- Campo de correo electrónico -->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introduce_tu_correo_electr_nico"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@android:color/white"
        android:elevation="4dp"
        android:layout_marginBottom="16dp" />

    <!-- Botón de recuperar contraseña -->
    <Button
        android:id="@+id/btnRecoverPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recuperar"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:elevation="6dp"
        android:layout_marginBottom="16dp" />

    <!-- Barra de progreso -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="16dp" />
</LinearLayout>

