<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/pastelBlue">

    <!-- Título -->
    <TextView
        android:id="@+id/textTitleGraphics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gr_ficos_financieros"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <!-- Total de ingresos -->
    <TextView
        android:id="@+id/textTotalIngresos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresos_0_00"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_dark"
        android:gravity="center"
        android:layout_marginBottom="8dp" />

    <!-- Total de gastos -->
    <TextView
        android:id="@+id/textTotalGastos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gastos_0_00"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark"
        android:gravity="center"
        android:layout_marginBottom="8dp" />

    <!-- Total de ahorro -->
    <TextView
        android:id="@+id/textTotalAhorro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ahorro_0_00"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="?android:attr/colorActivatedHighlight"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- Gráfico de barras -->
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="16dp" />

</LinearLayout>
