<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Texto para el usuario -->
    <TextView
        android:id="@+id/txtDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cuanto_dinero_hay_en_tu_cuenta"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp" />

    <!-- Campo para que el usuario introduzca el saldo -->
    <EditText
        android:id="@+id/editTextInitialBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introduce_tu_saldo"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray" />

    <!-- Botón para confirmar -->
    <Button
        android:id="@+id/btnConfirmBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/boton_redondeado"
        android:text="@string/confirmar"
        android:textColor="@android:color/white" />

</LinearLayout>
